// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`use-lunatic() > getData() > should only return requested variables 1`] = `
{
  "CALCULATED": {},
  "COLLECTED": {
    "COMMENT": {
      "COLLECTED": "Mon commentaire",
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
  },
  "EXTERNAL": {},
}
`;

exports[`use-lunatic() > getData() > should return calculated values 1`] = `
{
  "CALCULATED": {
    "FILTER_RESULT_AGE_CHAR": true,
    "FILTER_RESULT_AUDIENCE_SHARE": true,
    "FILTER_RESULT_BIRTH_CHARACTER": true,
    "FILTER_RESULT_CITY": true,
    "FILTER_RESULT_CLOWNING": true,
    "FILTER_RESULT_COMMENT": true,
    "FILTER_RESULT_DATEFIRST": true,
    "FILTER_RESULT_DATEYYYY": true,
    "FILTER_RESULT_DATEYYYYMM": true,
    "FILTER_RESULT_DURATIOND": true,
    "FILTER_RESULT_DURATIONH": true,
    "FILTER_RESULT_DURATIONHH": true,
    "FILTER_RESULT_DURATIONHM": true,
    "FILTER_RESULT_DURATIONM": true,
    "FILTER_RESULT_DURATIONY": true,
    "FILTER_RESULT_DURATIONYM": true,
    "FILTER_RESULT_FAVCHAR": true,
    "FILTER_RESULT_FAVOURITE_CHAR": true,
    "FILTER_RESULT_FEELCHAREV": true,
    "FILTER_RESULT_ICE_FLAVOUR": true,
    "FILTER_RESULT_LAST_FOOD_SHOPPING": true,
    "FILTER_RESULT_LEAVDURATION": true,
    "FILTER_RESULT_MAYOR": true,
    "FILTER_RESULT_MEMORY_CHAR": true,
    "FILTER_RESULT_NAME_CHAR": true,
    "FILTER_RESULT_NB_CHAR": true,
    "FILTER_RESULT_NUCLEAR_CHARACTER": true,
    "FILTER_RESULT_PERCENTAGE_EXPENSES": true,
    "FILTER_RESULT_PET": true,
    "FILTER_RESULT_PRODUCER": true,
    "FILTER_RESULT_READY": true,
    "FILTER_RESULT_SEASON_NUMBER": true,
    "FILTER_RESULT_STATE": true,
    "FILTER_RESULT_SURVEY_COMMENT": true,
    "FILTER_RESULT_TRAVEL": true,
    "SUM_EXPENSES": 0,
    "YEAR": "2020",
  },
  "COLLECTED": {
    "AGE_CHAR": {
      "COLLECTED": undefined,
      "EDITED": [],
      "FORCED": [],
      "INPUTTED": [],
      "PREVIOUS": [],
    },
    "AUDIENCE_SHARE": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "BIRTH_CHARACTER1": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "BIRTH_CHARACTER2": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "BIRTH_CHARACTER3": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "BIRTH_CHARACTER4": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "BIRTH_CHARACTER5": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CITY": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING11": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING12": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING21": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING22": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING31": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING32": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING41": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING42": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "COMMENT": {
      "COLLECTED": "Mon commentaire",
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DATEFIRST": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DATEYYYY": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DATEYYYYMM": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIOND": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONH": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONHH": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONHM": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONM": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONY": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONYM": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "FAVCHAR": {
      "COLLECTED": undefined,
      "EDITED": [],
      "FORCED": [],
      "INPUTTED": [],
      "PREVIOUS": [],
    },
    "FAVOURITE_CHAR1": {
      "COLLECTED": undefined,
      "EDITED": [],
      "FORCED": [],
      "INPUTTED": [],
      "PREVIOUS": [],
    },
    "FEELCHAREV1": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "FEELCHAREV2": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "FEELCHAREV3": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "FEELCHAREV4": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "ICE_FLAVOUR1": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "ICE_FLAVOUR2": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "ICE_FLAVOUR3": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "ICE_FLAVOUR4": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING11": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING21": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING31": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING41": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING51": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING61": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING71": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING81": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION11": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION12": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION21": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION22": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION31": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION32": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION41": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION42": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION51": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION52": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "MAYOR": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "MEMORY_CHAR": {
      "COLLECTED": undefined,
      "EDITED": [],
      "FORCED": [],
      "INPUTTED": [],
      "PREVIOUS": [],
    },
    "NAME_CHAR": {
      "COLLECTED": undefined,
      "EDITED": [],
      "FORCED": [],
      "INPUTTED": [],
      "PREVIOUS": [],
    },
    "NB_CHAR": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "NUCLEAR_CHARACTER1": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "NUCLEAR_CHARACTER2": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "NUCLEAR_CHARACTER3": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "NUCLEAR_CHARACTER4": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES11": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES21": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES31": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES41": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES51": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES61": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES71": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES81": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PET1": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PET2": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PET3": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PET4": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PRODUCER": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "READY": {
      "COLLECTED": true,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "SEASON_NUMBER": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "STATE": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "SURVEY_COMMENT": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL11": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL12": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL13": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL14": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL15": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL16": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL21": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL22": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL23": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL24": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL25": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL26": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL31": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL32": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL33": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL34": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL35": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL36": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL41": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL42": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL43": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL44": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL45": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL46": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
  },
  "EXTERNAL": {
    "LAST_BROADCAST": undefined,
  },
}
`;

exports[`use-lunatic() > getData() > should return every value 1`] = `
{
  "CALCULATED": {},
  "COLLECTED": {
    "AGE_CHAR": {
      "COLLECTED": [],
      "EDITED": [],
      "FORCED": [],
      "INPUTTED": [],
      "PREVIOUS": [],
    },
    "AUDIENCE_SHARE": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "BIRTH_CHARACTER1": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "BIRTH_CHARACTER2": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "BIRTH_CHARACTER3": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "BIRTH_CHARACTER4": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "BIRTH_CHARACTER5": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CITY": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING11": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING12": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING21": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING22": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING31": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING32": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING41": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "CLOWNING42": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "COMMENT": {
      "COLLECTED": "Mon commentaire",
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DATEFIRST": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DATEYYYY": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DATEYYYYMM": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIOND": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONH": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONHH": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONHM": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONM": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONY": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "DURATIONYM": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "FAVCHAR": {
      "COLLECTED": [],
      "EDITED": [],
      "FORCED": [],
      "INPUTTED": [],
      "PREVIOUS": [],
    },
    "FAVOURITE_CHAR1": {
      "COLLECTED": [],
      "EDITED": [],
      "FORCED": [],
      "INPUTTED": [],
      "PREVIOUS": [],
    },
    "FEELCHAREV1": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "FEELCHAREV2": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "FEELCHAREV3": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "FEELCHAREV4": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "ICE_FLAVOUR1": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "ICE_FLAVOUR2": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "ICE_FLAVOUR3": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "ICE_FLAVOUR4": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING11": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING21": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING31": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING41": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING51": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING61": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING71": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LAST_FOOD_SHOPPING81": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION11": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION12": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION21": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION22": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION31": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION32": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION41": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION42": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION51": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "LEAVDURATION52": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "MAYOR": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "MEMORY_CHAR": {
      "COLLECTED": [],
      "EDITED": [],
      "FORCED": [],
      "INPUTTED": [],
      "PREVIOUS": [],
    },
    "NAME_CHAR": {
      "COLLECTED": [],
      "EDITED": [],
      "FORCED": [],
      "INPUTTED": [],
      "PREVIOUS": [],
    },
    "NB_CHAR": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "NUCLEAR_CHARACTER1": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "NUCLEAR_CHARACTER2": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "NUCLEAR_CHARACTER3": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "NUCLEAR_CHARACTER4": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES11": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES21": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES31": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES41": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES51": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES61": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES71": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PERCENTAGE_EXPENSES81": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PET1": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PET2": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PET3": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PET4": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "PRODUCER": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "READY": {
      "COLLECTED": true,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "SEASON_NUMBER": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "STATE": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "SURVEY_COMMENT": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL11": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL12": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL13": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL14": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL15": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL16": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL21": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL22": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL23": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL24": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL25": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL26": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL31": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL32": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL33": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL34": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL35": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL36": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL41": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL42": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL43": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL44": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL45": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
    "TRAVEL46": {
      "COLLECTED": null,
      "EDITED": null,
      "FORCED": null,
      "INPUTTED": null,
      "PREVIOUS": null,
    },
  },
  "EXTERNAL": {
    "LAST_BROADCAST": undefined,
  },
}
`;

exports[`use-lunatic() > overview > with loop > should handle lastReachedPage 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujqeci5",
        "label": <MDLabel
          expression="Votre santé"
        />,
        "page": "2",
        "reached": true,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujqbyzl",
        "label": <MDLabel
          expression="Votre logement"
        />,
        "page": "3",
        "reached": true,
        "type": "Subsequence",
      },
    ],
    "current": true,
    "description": undefined,
    "id": "lujqfpva",
    "label": <MDLabel
      expression="I - Séquence 1"
    />,
    "page": "1",
    "reached": true,
    "type": "Sequence",
  },
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lulbmyhr",
        "label": <MDLabel
          expression="Commentaire sur composition du logement"
        />,
        "page": "8",
        "reached": true,
        "type": "Subsequence",
      },
    ],
    "current": false,
    "description": undefined,
    "id": "lujqrqmp",
    "label": <MDLabel
      expression="II - Habitants du logement"
    />,
    "page": "5",
    "reached": true,
    "type": "Sequence",
  },
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujykwaz",
        "label": <MDLabel
          expression="Caractéristiques de Quentin"
        />,
        "page": "10.1#1",
        "reached": true,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujykwaz",
        "label": <MDLabel
          expression="Caractéristiques de Luna"
        />,
        "page": "10.1#2",
        "reached": true,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujykwaz",
        "label": <MDLabel
          expression="Caractéristiques de Paul"
        />,
        "page": "10.1#3",
        "reached": true,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujyik5q",
        "label": <MDLabel
          expression="Autres caractéristiques de Luna : filtrée pour le premier individu"
        />,
        "page": "11.1#2",
        "reached": true,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "luk0swcz",
        "label": <MDLabel
          expression="Encore d'autres caractéristiques de Luna : filtrée pour le premier individu"
        />,
        "page": "11.2#2",
        "reached": true,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujyik5q",
        "label": <MDLabel
          expression="Autres caractéristiques de Paul : filtrée pour le premier individu"
        />,
        "page": "11.1#3",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "luk0swcz",
        "label": <MDLabel
          expression="Encore d'autres caractéristiques de Paul : filtrée pour le premier individu"
        />,
        "page": "11.2#3",
        "reached": false,
        "type": "Subsequence",
      },
    ],
    "current": false,
    "description": undefined,
    "id": "lujyi4pe",
    "label": <MDLabel
      expression="III - Détail des individus"
    />,
    "page": "9",
    "reached": true,
    "type": "Sequence",
  },
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfc98o",
        "label": <MDLabel
          expression="Belle sous-séquence pour Quentin"
        />,
        "page": "12.2#1",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfe3bj",
        "label": <MDLabel
          expression="Autre belle sous-seq"
        />,
        "page": "12.3#1",
        "reached": false,
        "type": "Subsequence",
      },
    ],
    "current": false,
    "description": undefined,
    "id": "luk1ojt5",
    "label": <MDLabel
      expression="IV - Belle séquence pour Quentin"
    />,
    "page": "12.1#1",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [],
    "current": false,
    "description": undefined,
    "id": "lulbelgr",
    "label": <MDLabel
      expression="V - Autre séquence pour Quentin"
    />,
    "page": "12.4#1",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfc98o",
        "label": <MDLabel
          expression="Belle sous-séquence pour Luna"
        />,
        "page": "12.2#2",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfe3bj",
        "label": <MDLabel
          expression="Autre belle sous-seq"
        />,
        "page": "12.3#2",
        "reached": false,
        "type": "Subsequence",
      },
    ],
    "current": false,
    "description": undefined,
    "id": "luk1ojt5",
    "label": <MDLabel
      expression="IV - Belle séquence pour Luna"
    />,
    "page": "12.1#2",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [],
    "current": false,
    "description": undefined,
    "id": "lulbelgr",
    "label": <MDLabel
      expression="V - Autre séquence pour Luna"
    />,
    "page": "12.4#2",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfc98o",
        "label": <MDLabel
          expression="Belle sous-séquence pour Paul"
        />,
        "page": "12.2#3",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfe3bj",
        "label": <MDLabel
          expression="Autre belle sous-seq"
        />,
        "page": "12.3#3",
        "reached": false,
        "type": "Subsequence",
      },
    ],
    "current": false,
    "description": undefined,
    "id": "luk1ojt5",
    "label": <MDLabel
      expression="IV - Belle séquence pour Paul"
    />,
    "page": "12.1#3",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [],
    "current": false,
    "description": undefined,
    "id": "lulbelgr",
    "label": <MDLabel
      expression="V - Autre séquence pour Paul"
    />,
    "page": "12.4#3",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [],
    "current": false,
    "description": undefined,
    "id": "COMMENT-SEQ",
    "label": <MDLabel
      expression="Commentaire"
    />,
    "page": "13",
    "reached": false,
    "type": "Sequence",
  },
]
`;

exports[`use-lunatic() > overview > with loop > should work with loop 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujqeci5",
        "label": <MDLabel
          expression="Votre santé"
        />,
        "page": "2",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujqbyzl",
        "label": <MDLabel
          expression="Votre logement"
        />,
        "page": "3",
        "reached": false,
        "type": "Subsequence",
      },
    ],
    "current": true,
    "description": undefined,
    "id": "lujqfpva",
    "label": <MDLabel
      expression="I - Séquence 1"
    />,
    "page": "1",
    "reached": true,
    "type": "Sequence",
  },
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lulbmyhr",
        "label": <MDLabel
          expression="Commentaire sur composition du logement"
        />,
        "page": "8",
        "reached": false,
        "type": "Subsequence",
      },
    ],
    "current": false,
    "description": undefined,
    "id": "lujqrqmp",
    "label": <MDLabel
      expression="II - Habitants du logement"
    />,
    "page": "5",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujykwaz",
        "label": <MDLabel
          expression="Caractéristiques de Quentin"
        />,
        "page": "10.1#1",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujykwaz",
        "label": <MDLabel
          expression="Caractéristiques de Luna"
        />,
        "page": "10.1#2",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujykwaz",
        "label": <MDLabel
          expression="Caractéristiques de Paul"
        />,
        "page": "10.1#3",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujyik5q",
        "label": <MDLabel
          expression="Autres caractéristiques de Luna : filtrée pour le premier individu"
        />,
        "page": "11.1#2",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "luk0swcz",
        "label": <MDLabel
          expression="Encore d'autres caractéristiques de Luna : filtrée pour le premier individu"
        />,
        "page": "11.2#2",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lujyik5q",
        "label": <MDLabel
          expression="Autres caractéristiques de Paul : filtrée pour le premier individu"
        />,
        "page": "11.1#3",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "luk0swcz",
        "label": <MDLabel
          expression="Encore d'autres caractéristiques de Paul : filtrée pour le premier individu"
        />,
        "page": "11.2#3",
        "reached": false,
        "type": "Subsequence",
      },
    ],
    "current": false,
    "description": undefined,
    "id": "lujyi4pe",
    "label": <MDLabel
      expression="III - Détail des individus"
    />,
    "page": "9",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfc98o",
        "label": <MDLabel
          expression="Belle sous-séquence pour Quentin"
        />,
        "page": "12.2#1",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfe3bj",
        "label": <MDLabel
          expression="Autre belle sous-seq"
        />,
        "page": "12.3#1",
        "reached": false,
        "type": "Subsequence",
      },
    ],
    "current": false,
    "description": undefined,
    "id": "luk1ojt5",
    "label": <MDLabel
      expression="IV - Belle séquence pour Quentin"
    />,
    "page": "12.1#1",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [],
    "current": false,
    "description": undefined,
    "id": "lulbelgr",
    "label": <MDLabel
      expression="V - Autre séquence pour Quentin"
    />,
    "page": "12.4#1",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfc98o",
        "label": <MDLabel
          expression="Belle sous-séquence pour Luna"
        />,
        "page": "12.2#2",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfe3bj",
        "label": <MDLabel
          expression="Autre belle sous-seq"
        />,
        "page": "12.3#2",
        "reached": false,
        "type": "Subsequence",
      },
    ],
    "current": false,
    "description": undefined,
    "id": "luk1ojt5",
    "label": <MDLabel
      expression="IV - Belle séquence pour Luna"
    />,
    "page": "12.1#2",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [],
    "current": false,
    "description": undefined,
    "id": "lulbelgr",
    "label": <MDLabel
      expression="V - Autre séquence pour Luna"
    />,
    "page": "12.4#2",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfc98o",
        "label": <MDLabel
          expression="Belle sous-séquence pour Paul"
        />,
        "page": "12.2#3",
        "reached": false,
        "type": "Subsequence",
      },
      {
        "children": [],
        "current": false,
        "description": undefined,
        "id": "lumfe3bj",
        "label": <MDLabel
          expression="Autre belle sous-seq"
        />,
        "page": "12.3#3",
        "reached": false,
        "type": "Subsequence",
      },
    ],
    "current": false,
    "description": undefined,
    "id": "luk1ojt5",
    "label": <MDLabel
      expression="IV - Belle séquence pour Paul"
    />,
    "page": "12.1#3",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [],
    "current": false,
    "description": undefined,
    "id": "lulbelgr",
    "label": <MDLabel
      expression="V - Autre séquence pour Paul"
    />,
    "page": "12.4#3",
    "reached": false,
    "type": "Sequence",
  },
  {
    "children": [],
    "current": false,
    "description": undefined,
    "id": "COMMENT-SEQ",
    "label": <MDLabel
      expression="Commentaire"
    />,
    "page": "13",
    "reached": false,
    "type": "Sequence",
  },
]
`;
